--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.6"
-juniper = "0.15.1"
-#elastic = "0.21.0-pre.5"
-#elastic_derive = "0.21.0-pre.5"
+warp = "0.3.0"
+async-graphql = "2.5.2"
+async-graphql-warp = "2.5.2"
 elasticsearch = "7.10.1-alpha.1"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
