--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 warp = "0.3.0"
 async-graphql = "2.5.2"
 async-graphql-warp = "2.5.2"
+async-trait = "0.1.42"
 elasticsearch = "7.10.1-alpha.1"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
